Ajout de l'affichage de toutes les remarques dans les graphiques.

--- a/graphiques.ipynb
+++ b/graphiques.ipynb
@@ -11,6 +11,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "48dada01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7ff12912",
    "metadata": {},
    "outputs": [],
@@ -99,38 +109,30 @@
     "\n",
     "fig, ax1 = plt.subplots(figsize=(12, 3), dpi=80, facecolor='ivory', edgecolor='red')\n",
     "# sur échelle de gauche : \n",
-    "color1 = \"red\"\n",
-    "ax1.set_ylabel(\"Volumes en % occupation\", color=color1)\n",
+    "color1 = \"purple\"\n",
+    "ax1.set_ylabel(\"Volumes dispo en MB\", color=color1)\n",
     "for item in on_left:\n",
     "    ax1.plot(df2.index, df2[item], \"--\", color= color1, label = item)\n",
     "\n",
     "\n",
     "ax2 = ax1.twinx()\n",
     "# sur échelle de droite\n",
-    "color2= 'tab:blue'\n",
-    "\n",
-    "ax2.set_ylabel(\"Volumes dispo en MB\", color=color2)\n",
+    "color2= 'tab:grey'\n",
+    "ax2.set_ylabel(\"Volumes en % occupation\", color=color2)\n",
     "for item in on_right:\n",
     "    ax2.plot(df2.index, df2[item], \".\", color=color2, label = item)\n",
     "\n",
     "fig.legend(loc = (0.08, 0.8)) #  bbox_to_anchor = (datetime(2022, 12, 1), 8000)\n",
     "# Ajout des commentaires.\n",
-    "other_comments = [(datetime(2023, 6, 1), \"Intervention Mips\")]\n",
-    "for a_date, label in other_comments:\n",
-    "    if (a_date > df2[:1].index) and (a_date < df2[-1:].index): \n",
-    "        ax1.annotate(label, xy=(a_date, 4000), rotation=45)\n",
+    "\n",
+    "remarques_df = df2[~df2.rem.isnull()][[\"rem\"]]\n",
+    "for line in remarques_df.itertuples():\n",
+    "    a_date = line.Index\n",
+    "    rem = line.rem\n",
+    "    if (a_date > df2[:1].index) and (a_date < df2[-1:].index):\n",
+    "        ax1.annotate(label, xy=(a_date, 6000), rotation=45)\n",
     "\n",
     "fig.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd92c02b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.columns"
    ]
   },
   {
@@ -140,13 +142,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Représentation de la gestion des extends"
+    "# Représentation de la gestion des extends + toutes remarques "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2a6cd96",
+   "id": "ec42a38b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,10 +164,13 @@
     "ax2.set_ylabel('area_MB_libres', color=color2)\n",
     "\n",
     "fig.legend()\n",
+    "\n",
     "# Ajout des commentaires.\n",
-    "other_comments = [(datetime(2023, 6, 1), \"Intervention Mips\")]\n",
-    "for a_date, label in other_comments:\n",
-    "    if (a_date > df2[:1].index) and (a_date < df2[-1:].index): \n",
+    "remarques_df = df2[~df2.rem.isnull()][[\"rem\"]]\n",
+    "for line in remarques_df.itertuples():\n",
+    "    a_date = line.Index\n",
+    "    rem = line.rem\n",
+    "    if (a_date > df2[:1].index) and (a_date < df2[-1:].index):\n",
     "        ax1.annotate(label, xy=(a_date, 93), rotation=45)\n",
     "\n",
     "fig.tight_layout()"
@@ -174,79 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "284a9651",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e370eb79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "del df2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d127f86d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48dafc53",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Créer un DataFrame de démonstration avec un DateTimeIndex\n",
-    "data = {'a': [100, 150, 200, 180, 220],\n",
-    "        'b': [5000, 6000, 5500, 5800, 5700]}\n",
-    "index = pd.date_range('2023-01-01', periods=5, freq='D')\n",
-    "df = pd.DataFrame(data, index=index)\n",
-    "\n",
-    "# Créer une figure et des axes\n",
-    "fig, ax1 = plt.subplots()\n",
-    "\n",
-    "# Tracer la colonne 'a' avec une échelle à droite\n",
-    "color = 'tab:blue'\n",
-    "ax1.set_xlabel('Date')\n",
-    "ax1.set_ylabel('Column a', color=color)\n",
-    "ax1.plot(df.index, df['a'], color=color)\n",
-    "ax1.tick_params(axis='y', labelcolor=color)\n",
-    "\n",
-    "# Créer un deuxième axe partageant le même axe x (Date)\n",
-    "ax2 = ax1.twinx()\n",
-    "\n",
-    "# Tracer la colonne 'b' avec une échelle à gauche\n",
-    "color = 'tab:red'\n",
-    "ax2.set_ylabel('Column b', color=color)\n",
-    "ax2.plot(df.index, df['b'], color=color)\n",
-    "ax2.tick_params(axis='y', labelcolor=color)\n",
-    "\n",
-    "# Ajuster la disposition pour éviter que les étiquettes ne se chevauchent\n",
-    "fig.tight_layout()\n",
-    "\n",
-    "# Afficher le graphique\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a62dd66",
+   "id": "234e0d71",
    "metadata": {},
    "outputs": [],
    "source": []
